feat: implement Holyfields schema registry and event catalog
- Rename from bloodbank-contracts to holyfields
- Add transcription event schema v1.0.0
- Create comprehensive schema catalog structure
- Add integration tickets and user stories
- Implement schema generation scripts
- Add BMM workflow tracking
- Configure build tools (bun, mise, typescript)
- Set up test infrastructure
- Document theboard integration

--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -1,8 +1,8 @@
 # BMAD Method Workflow Status
 # Generated: 2026-01-14T15:47:40Z
-# Project: bloodbank-contracts
+# Project: holyfields
 
-project_name: "bloodbank-contracts"
+project_name: "holyfields"
 project_type: "library"
 project_level: 1
 communication_language: "English"
@@ -22,7 +22,7 @@ workflow_status:
   # Phase 1: Analysis (Optional but recommended)
   - name: product-brief
     phase: 1
-    status: "docs/product-brief-bloodbank-contracts-2026-01-14.md"
+    status: "docs/product-brief-holyfields-2026-01-14.md"
     description: "Create comprehensive product brief"
 
   - name: brainstorm-project
@@ -38,12 +38,12 @@ workflow_status:
   # Phase 2: Planning (Required - choose one based on project level)
   - name: prd
     phase: 2
-    status: "recommended"  # required for level 2+, recommended for level 1
+    status: "recommended" # required for level 2+, recommended for level 1
     description: "Product Requirements Document"
 
   - name: tech-spec
     phase: 2
-    status: "docs/tech-spec-bloodbank-contracts-2026-01-14.md"
+    status: "docs/tech-spec-holyfields-2026-01-14.md"
     description: "Technical Specification"
 
   - name: create-ux-design
@@ -54,7 +54,7 @@ workflow_status:
   # Phase 3: Solutioning (Conditional on project level)
   - name: architecture
     phase: 3
-    status: "optional"  # required for level 2+
+    status: "optional" # required for level 2+
     description: "System architecture design"
 
   - name: solutioning-gate-check
@@ -65,7 +65,7 @@ workflow_status:
   # Phase 4: Implementation (Required)
   - name: sprint-planning
     phase: 4
-    status: "docs/sprint-plan-bloodbank-contracts-2026-01-14.md"
+    status: "docs/sprint-plan-holyfields-2026-01-14.md"
     description: "Plan sprint iterations with stories"
 
   # Note: Implementation tracked in sprint-status.yaml
