--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -1,12 +1,12 @@
 # Sprint Status Tracking
 # Generated: 2026-01-14T19:00:00Z
-# Project: bloodbank-contracts
+# Project: holyfields
 
 version: "6.0.0"
-project_name: "bloodbank-contracts"
+project_name: "holyfields"
 project_level: 1
 current_sprint: 1
-sprint_plan_path: "docs/sprint-plan-bloodbank-contracts-2026-01-14.md"
+sprint_plan_path: "docs/sprint-plan-holyfields-2026-01-14.md"
 
 sprints:
   - sprint_number: 1
@@ -14,45 +14,50 @@ sprints:
     end_date: "2026-01-28"
     capacity_points: 30
     committed_points: 33
-    completed_points: 0
-    status: "not_started"
+    completed_points: 20
+    status: "in_progress"
     goal: "Establish complete contract infrastructure with TheBoard events, automated generation, CI validation, and documentation"
     stories:
       - story_id: "STORY-001"
         title: "Repository Infrastructure"
         points: 2
         priority: "must_have"
-        status: "not_started"
+        status: "completed"
         assigned_to: "Jarad DeLorenzo"
         dependencies: []
+        completed_date: "2026-01-25"
       - story_id: "STORY-002"
         title: "Common Base Schemas"
         points: 3
         priority: "must_have"
-        status: "not_started"
+        status: "completed"
         assigned_to: "Jarad DeLorenzo"
         dependencies: ["STORY-001"]
+        completed_date: "2026-01-25"
       - story_id: "STORY-003"
         title: "TheBoard Event Schemas"
         points: 5
         priority: "must_have"
-        status: "not_started"
+        status: "completed"
         assigned_to: "Jarad DeLorenzo"
         dependencies: ["STORY-002"]
+        completed_date: "2026-01-25"
       - story_id: "STORY-004"
         title: "Python Generation Pipeline"
         points: 5
         priority: "must_have"
-        status: "not_started"
+        status: "completed"
         assigned_to: "Jarad DeLorenzo"
         dependencies: ["STORY-002", "STORY-003"]
+        completed_date: "2026-01-25"
       - story_id: "STORY-005"
         title: "TypeScript Generation Pipeline"
         points: 5
         priority: "must_have"
-        status: "not_started"
+        status: "completed"
         assigned_to: "Jarad DeLorenzo"
         dependencies: ["STORY-002", "STORY-003"]
+        completed_date: "2026-01-26"
       - story_id: "STORY-006"
         title: "Contract Test Framework"
         points: 5
@@ -76,7 +81,7 @@ sprints:
         dependencies: ["STORY-003"]
 
 velocity:
-  sprint_1: null  # Will be filled when sprint completes
+  sprint_1: null # Will be filled when sprint completes
   rolling_average: null
 
 team:
